k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-aiagent-ui-ingress
  namespace: ops-agent
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.1.1/32,10.10.10.0/24"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: opsagent.ampaura.tech
    http:
      paths:
      - backend:
          service:
            name: k8s-aiagent-ui
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: ops-agent
            port:
              number: 80
        path: /api(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: ops-agent
            port:
              number: 80
        path: /login
        pathType: Exact
